Fix mobile menu: close button visibility and viewport coverage
- Move close button display:none out of #primary-menu scope
- Switch overlay from position:absolute to position:fixed

--- a/assets/css/src/_navigation.scss
+++ b/assets/css/src/_navigation.scss
@@ -80,6 +80,10 @@
 	/* Full desktop navigation */
 	&:not(.toggled) {
 
+		.close-menu-modal {
+			display: none;
+		}
+
 		#primary-menu {
 			align-items: center;
 			display: none;
@@ -88,10 +92,6 @@
 			@media all and (min-width: $mdMinWidth) {
 				display: flex;
 				flex-wrap: wrap;
-			}
-
-			.close-menu-modal {
-				display: none;
 			}
 
 			& > .menu-item {
@@ -227,7 +227,7 @@
 			overflow: hidden;
 			padding: 1.5rem;
 			pointer-events: none;
-			position: absolute;
+			position: fixed;
 			top: 0;
 			transition: opacity 0.2s;
 			width: 100vw;
